// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Pagination 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__PaginationWrapper"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md __PRISMUI_COMPONENT_CLASS_PREFIX__PaginationWrapper-pager"
      >
        <ul
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
        >
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev is-disabled"
          >
            <span>
              <icon-mock
                class="icon icon-left-arrow"
                icon="left-arrow"
              />
            </span>
          </li>
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item is-active"
          >
            <a
              role="button"
            >
              1
            </a>
          </li>
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
          >
            <a
              role="button"
            >
              2
            </a>
          </li>
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
          >
            <a
              role="button"
            >
              3
            </a>
          </li>
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
          >
            <a
              role="button"
            >
              4
            </a>
          </li>
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
          >
            <a
              role="button"
            >
              5
            </a>
          </li>
          <li
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next"
          >
            <span>
              <icon-mock
                class="icon icon-right-arrow"
                icon="right-arrow"
              />
            </span>
          </li>
        </ul>
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table"
        style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px;"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-fixedTop"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-heading"
          >
            分页表格
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-contentWrap"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content"
          >
            <table
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table"
            >
              <colgroup>
                <col
                  data-index="3"
                />
                <col
                  data-index="4"
                />
              </colgroup>
              <thead>
                <tr
                  class=""
                >
                  <th
                    class=""
                    data-index="3"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          Engine
                        </span>
                      </span>
                    </div>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                      data-index="3"
                    />
                  </th>
                  <th
                    class=""
                    data-index="4"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                    >
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          Version
                        </span>
                      </span>
                    </div>
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                      data-index="4"
                    />
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--odd __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                  data-id="1"
                  data-index="0"
                >
                  <td
                    class=""
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                    >
                      Trident
                    </span>
                  </td>
                  <td
                    class=""
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                    >
                      4
                    </span>
                  </td>
                </tr>
                <tr
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--even __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                  data-id="2"
                  data-index="1"
                >
                  <td
                    class=""
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                    >
                      Trident
                    </span>
                  </td>
                  <td
                    class=""
                  >
                    <span
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                    >
                      4
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Pagination 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-total __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        共 999 条
      </div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-perpage __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
        role="combobox"
        tabindex="0"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-valueWrap"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-value"
          >
            10条/页
          </div>
        </div>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-arrow"
        >
          <icon-mock
            class="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </div>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev"
        >
          <span>
            <icon-mock
              class="icon icon-left-arrow"
              icon="left-arrow"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            1
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
        >
          <a
            role="button"
          >
            ...
          </a>
          <span
            class="icon"
          >
            <icon-mock
              class="icon icon-arrow-double-left"
              icon="arrow-double-left"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            3
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            4
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
        >
          <a
            role="button"
          >
            ...
          </a>
          <span
            class="icon"
          >
            <icon-mock
              class="icon icon-arrow-double-right"
              icon="arrow-double-right"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            100
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next"
        >
          <span>
            <icon-mock
              class="icon icon-right-arrow"
              icon="right-arrow"
            />
          </span>
        </li>
      </ul>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-left"
        >
          跳转至
        </span>
        <input
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-input"
          type="text"
          value=""
        />
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-right"
        >
          前往
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Pagination with disabled 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md disabled"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev is-disabled"
        >
          <span>
            <icon-mock
              class="icon icon-left-arrow"
              icon="left-arrow"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item is-active"
        >
          <a
            role="button"
          >
            1
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            2
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            3
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            4
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            5
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            6
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            7
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
        >
          <a
            role="button"
          >
            ...
          </a>
          <span
            class="icon"
          >
            <icon-mock
              class="icon icon-arrow-double-right"
              icon="arrow-double-right"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            100
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next"
        >
          <span>
            <icon-mock
              class="icon icon-right-arrow"
              icon="right-arrow"
            />
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Renderer:Pagination with layout 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-total __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        共 999 条
      </div>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-left"
        >
          跳转至
        </span>
        <input
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-input"
          type="text"
          value=""
        />
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-right"
        >
          前往
        </span>
      </div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-perpage __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
        role="combobox"
        tabindex="0"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-valueWrap"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-value"
          >
            10条/页
          </div>
        </div>
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-arrow"
        >
          <icon-mock
            class="icon icon-right-arrow-bold"
            icon="right-arrow-bold"
          />
        </span>
      </div>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev"
        >
          <span>
            <icon-mock
              class="icon icon-left-arrow"
              icon="left-arrow"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            1
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item is-active"
        >
          <a
            role="button"
          >
            2
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            3
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            4
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            5
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            6
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            7
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
        >
          <a
            role="button"
          >
            ...
          </a>
          <span
            class="icon"
          >
            <icon-mock
              class="icon icon-arrow-double-right"
              icon="arrow-double-right"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            100
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next"
        >
          <span>
            <icon-mock
              class="icon icon-right-arrow"
              icon="right-arrow"
            />
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Renderer:Pagination with maxButtons 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev"
        >
          <span>
            <icon-mock
              class="icon icon-left-arrow"
              icon="left-arrow"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            1
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
        >
          <a
            role="button"
          >
            ...
          </a>
          <span
            class="icon"
          >
            <icon-mock
              class="icon icon-arrow-double-left"
              icon="arrow-double-left"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            16
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            17
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            18
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            19
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item is-active"
        >
          <a
            role="button"
          >
            20
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            21
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            22
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            23
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
        >
          <a
            role="button"
          >
            ...
          </a>
          <span
            class="icon"
          >
            <icon-mock
              class="icon icon-arrow-double-right"
              icon="arrow-double-right"
            />
          </span>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
        >
          <a
            role="button"
          >
            100
          </a>
        </li>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next"
        >
          <span>
            <icon-mock
              class="icon icon-right-arrow"
              icon="right-arrow"
            />
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Renderer:Pagination with showPerPage & perPageAvailable & showPageInput 1`] = `
<div
  aria-expanded="true"
  aria-haspopup="listbox"
  aria-owns="downshift-2-menu"
  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select is-opened __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-perpage __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item has-popover"
  role="combobox"
  tabindex="0"
>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-valueWrap"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-placeholder"
    >
      请选择
    </div>
  </div>
  <span
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-arrow"
  >
    <icon-mock
      class="icon icon-right-arrow-bold"
      icon="right-arrow-bold"
    />
  </span>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__Select-popover"
    data-prismui-theme="cxd"
    role="popover"
    style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
    theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver-overlay"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-menu"
    >
      <div
        aria-selected="false"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
        id="downshift-2-item-0"
        role="option"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
          title="2条/页"
        >
          2条/页
        </span>
      </div>
      <div
        aria-selected="false"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
        id="downshift-2-item-1"
        role="option"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
          title="11条/页"
        >
          11条/页
        </span>
      </div>
      <div
        aria-selected="false"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
        id="downshift-2-item-2"
        role="option"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
          title="37条/页"
        >
          37条/页
        </span>
      </div>
      <div
        aria-selected="false"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
        id="downshift-2-item-3"
        role="option"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
          title="101条/页"
        >
          101条/页
        </span>
      </div>
      <div
        aria-selected="false"
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
        id="downshift-2-item-4"
        role="option"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
          title="555条/页"
        >
          555条/页
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Pagination with simple mode 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-simple"
    >
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-items __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
      >
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev is-disabled"
        >
          <span>
            <icon-mock
              class="icon icon-left-arrow"
              icon="left-arrow"
            />
          </span>
        </li>
        <span
          class="Pagination-simple-number"
        >
          1
        </span>
        <li
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next is-disabled"
        >
          <span>
            <icon-mock
              class="icon icon-right-arrow"
              icon="right-arrow"
            />
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
